# prisma-client-rust

./: Cargo.toml
.cargo/: config.toml
crates/generator/: Cargo.toml
crates/generator-macros/: Cargo.toml
crates/generator-macros/src/: filter.rs
crates/generator-macros/src/select_include/: mod.rs
crates/generator-shared/: Cargo.toml
crates/generator/src/: read_filters.rs
crates/generator/src/composite_types/: mod.rs
crates/generator/src/models/: data.rs  mod.rs  order_by.rs  select_include.rs  where_params.rs
crates/lib/: Cargo.toml
crates/lib/src/: client.rs  prisma_value.rs  raw.rs  transaction.rs
crates/lib/src/queries/: count.rs  create.rs  create_many.rs  create_unchecked.rs  find_first.rs  find_many.rs  find_unique.rs  mod.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: args.rs  dmmf.rs  extensions.rs  keywords.rs  lib.rs  runtime.rs
