[workspace]
exclude  = ["crates/cli", "crates/sdk/example"]
members  = ["crates/*"]
resolver = "2"

[workspace.dependencies]
prisma-client-rust = { path = "crates/lib" }

dmmf               = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "d50d8d7a67" }
prisma-models      = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "d50d8d7a67" }
psl                = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "d50d8d7a67" }
query-core         = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "d50d8d7a67" }
request-handlers   = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "d50d8d7a67" }
schema-core        = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "d50d8d7a67" }
user-facing-errors = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "d50d8d7a67" }

convert_case = "0.6.0"
proc-macro2  = "1.0"
quote        = "1.0"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
syn          = "2.0"
# We don't lock version cause PCR only depends on `derive(Type)` so it should be fine.
specta    = "^2.0.0-rc"
thiserror = "1.0"

[workspace.dependencies.rspc]
git = "https://github.com/spacedriveapp/rspc.git"
rev = "68349c19e1"
