[workspace]
exclude  = ["crates/cli", "crates/sdk/example"]
members  = ["crates/*"]
resolver = "2"

[workspace.dependencies]
prisma-client-rust = { path = "crates/lib" }

dmmf               = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "93a72cdc2a" }
prisma-models      = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "93a72cdc2a" }
psl                = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "93a72cdc2a" }
query-core         = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "93a72cdc2a" }
request-handlers   = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "93a72cdc2a" }
schema-core        = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "93a72cdc2a" }
user-facing-errors = { git = "https://github.com/spacedriveapp/prisma-engines.git", rev = "93a72cdc2a" }

convert_case = "0.6.0"
proc-macro2  = "1.0"
quote        = "1.0"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
syn          = "2.0"
# We don't lock version cause PCR only depends on `derive(Type)` so it should be fine.
specta    = "^2.0.0-rc"
thiserror = "1.0"

[workspace.dependencies.rspc]
git = "https://github.com/spacedriveapp/rspc.git"
rev = "6a77167495"
