[package]
name    = "prisma-client-rust-generator-shared"
version = "0.1.0"

edition = "2021"

[dependencies]
prisma-client-rust-sdk = { path = "../sdk" }

convert_case.workspace = true
proc-macro2.workspace  = true
quote.workspace        = true
syn                    = { workspace = true, features = ["extra-traits"] }
