[package]
name    = "prisma-client-rust-generator"
version = "0.6.8"

authors      = ["Brendan Allan <brendonovich@outlook.com>"]
edition      = "2021"
rust-version = "1.62"

[features]
migrations         = []
mocking            = []
mutation-callbacks = []
rspc               = ["specta"]
specta             = []
sqlite-create-many = ["prisma-client-rust-sdk/sqlite-create-many"]

mongodb    = ["prisma-client-rust-sdk/mongodb"]
mssql      = ["prisma-client-rust-sdk/mssql"]
mysql      = ["prisma-client-rust-sdk/mysql"]
postgresql = ["prisma-client-rust-sdk/postgresql"]
sqlite     = ["prisma-client-rust-sdk/sqlite"]

[dependencies]
prisma-client-rust-generator-shared = { path = "../generator-shared" }
prisma-client-rust-sdk              = { path = "../sdk", default-features = false }

proc-macro2.workspace = true
quote.workspace       = true
serde.workspace       = true
syn                   = { workspace = true, features = ["full"] }
thiserror.workspace   = true

directories = "5.0"
