[package]
description = "A prisma client for Rust"
name        = "prisma-client-rust"
version     = "0.6.8"

authors      = ["Brendan Allan <brendonovich@outlook.com>"]
edition      = "2021"
rust-version = "1.62"

[features]
default            = []
migrations         = ["dep:include_dir", "dep:tempfile", "dep:tracing", "schema-core", "tokio/fs"]
mocking            = ["tokio"]
rspc               = ["dep:rspc", "specta"]
specta             = ["dep:specta", "prisma-client-rust-generator-macros/specta"]
sqlite-create-many = ["psl/sqlite-create-many"]

mongodb    = ["request-handlers/mongodb", "schema-core/mongodb"]
mssql      = ["request-handlers/mssql", "schema-core/mssql"]
mysql      = ["request-handlers/mysql", "schema-core/mysql"]
postgresql = ["request-handlers/postgresql", "schema-core/postgresql"]
sqlite     = ["request-handlers/sqlite", "schema-core/sqlite"]

[dependencies]
prisma-client-rust-generator-macros = { path = "../generator-macros" }

prisma-models.workspace      = true
psl.workspace                = true
query-core.workspace         = true
request-handlers.workspace   = true
serde.workspace              = true
serde_json.workspace         = true
thiserror.workspace          = true
user-facing-errors.workspace = true

base64      = "0.22.1"
bigdecimal  = { version = "0.4.5", features = ["serde"] }
chrono      = { version = "0.4.38", features = ["serde"] }
futures     = "0.3"
indexmap    = { version = "2.6", features = ["serde"] }
paste       = "1.0.11"
serde-value = "0.7.0"
uuid        = { version = "1", features = ["serde"] }

# features = "migrations"
include_dir = { version = "0.7.4", optional = true }
schema-core = { workspace = true, optional = true }
tempfile    = { version = "3.13", optional = true }
tokio       = { version = "1.40", optional = true }
tracing     = { version = "0.1.40", optional = true }

# features = "rspc"
dotenvy = "0.15.7"
rspc    = { optional = true, workspace = true }

# features = "specta"
[dependencies.specta]
features  = ["bigdecimal", "chrono", "indexmap", "uuid"]
optional  = true
workspace = true
