[package]
name    = "prisma-client-rust-sdk"
version = "0.6.8"

authors      = ["Brendan Allan <brendonovich@outlook.com>"]
edition      = "2021"
rust-version = "1.62"

[features]
mongodb    = ["request-handlers/mongodb"]
mssql      = ["request-handlers/mssql"]
mysql      = ["request-handlers/mysql"]
postgresql = ["request-handlers/postgresql"]
sqlite     = ["request-handlers/sqlite"]

sqlite-create-many = ["psl/sqlite-create-many"]

[dependencies]
convert_case.workspace     = true
dmmf.workspace             = true
prisma-models.workspace    = true
proc-macro2.workspace      = true
psl.workspace              = true
query-core.workspace       = true
quote.workspace            = true
request-handlers.workspace = true
serde.workspace            = true
serde_json.workspace       = true
syn.workspace              = true
thiserror.workspace        = true

serde_path_to_error = "0.1.7"
